2013-05-01  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-forward, isearch-mode): Doc fix.  (Bug#13923)

2013-05-01  Juri Linkov  <juri@jurta.org>

	* comint.el (comint-previous-matching-input): Don't print message
	"History item: %d" when `isearch-mode' is active.
	(comint-history-isearch-message): Print message "History item: %d"
	when `comint-input-ring-index' is not empty and this function is
	called from `isearch-update' with a nil `ellipsis'.  (Bug#13223)

2013-05-01  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-abbrev-table): Remove abbrev
	definitions.  Use completion-at-point to insert keywords.
	(octave-abbrev-start): Remove.
	(inferior-octave-mode, octave-mode): Use :abbrev-table instead.

2013-04-30  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-prompt-read-only): Fix last
	change.

2013-04-30  Alan Mackenzie  <acm@muc.de>

	Handle arbitrarily long C++ member initialisation lists.
	* progmodes/cc-engine.el (c-back-over-member-initializers): new
	function.
	(c-guess-basic-syntax): New CASE 5R (extracted from 5B) to handle
	(most) member init lists.

2013-04-30  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* progmodes/octave.el (inferior-octave-prompt-read-only): New user
	variable.

2013-04-30  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-variables): Remove.  No builtin
	variables any more.  All converted to functions.
	(octave-font-lock-keywords, octave-completion-at-point-function):
	Fix uses.
	(octave-font-lock-texinfo-comment): New user variable.
	(octave-texinfo-font-lock-keywords): New variable for texinfo
	comment block.
	(octave-function-comment-block): New face.
	(octave-font-lock-texinfo-comment): New function.
	(octave-mode): Font lock texinfo comment block.

2013-04-29  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-font-lock-keywords): Handle 'end' in
	indexing expression.
	(octave-continuation-string): Do not use \.